// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndicesList should change pages 1`] = `
<div>
  <EuiTable>
    <EuiTableBody>
      <EuiTableRow
        key="0"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="1"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPopover
        anchorPosition="downCenter"
        button={
          <EuiButtonEmpty
            color="text"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
            size="s"
            type="button"
          >
            Rows per page: 
            1
          </EuiButtonEmpty>
        }
        closePopover={[Function]}
        id="customizablePagination"
        isOpen={false}
        ownFocus={false}
        panelPaddingSize="none"
        withTitle={true}
      >
        <EuiContextMenuPanel
          hasFocus={true}
          items={
            Array [
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                5
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                10
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                20
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                50
              </EuiContextMenuItem>,
            ]
          }
        />
      </EuiPopover>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`IndicesList should change per page 1`] = `
<div>
  <EuiTable>
    <EuiTableBody>
      <EuiTableRow
        key="0"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPopover
        anchorPosition="downCenter"
        button={
          <EuiButtonEmpty
            color="text"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
            size="s"
            type="button"
          >
            Rows per page: 
            1
          </EuiButtonEmpty>
        }
        closePopover={[Function]}
        id="customizablePagination"
        isOpen={false}
        ownFocus={false}
        panelPaddingSize="none"
        withTitle={true}
      >
        <EuiContextMenuPanel
          hasFocus={true}
          items={
            Array [
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                5
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                10
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                20
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                50
              </EuiContextMenuItem>,
            ]
          }
        />
      </EuiPopover>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPagination
        activePage={0}
        onPageClick={[Function]}
        pageCount={2}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`IndicesList should highlight the query in the matches 1`] = `
<div>
  <EuiTable>
    <EuiTableBody>
      <EuiTableRow
        key="0"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          <span>
            <strong>
              ki
            </strong>
            bana
          </span>
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="1"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPopover
        anchorPosition="downCenter"
        button={
          <EuiButtonEmpty
            color="text"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
            size="s"
            type="button"
          >
            Rows per page: 
            10
          </EuiButtonEmpty>
        }
        closePopover={[Function]}
        id="customizablePagination"
        isOpen={false}
        ownFocus={false}
        panelPaddingSize="none"
        withTitle={true}
      >
        <EuiContextMenuPanel
          hasFocus={true}
          items={
            Array [
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                5
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                10
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                20
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                50
              </EuiContextMenuItem>,
            ]
          }
        />
      </EuiPopover>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`IndicesList should render normally 1`] = `
<div>
  <EuiTable>
    <EuiTableBody>
      <EuiTableRow
        key="0"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="1"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPopover
        anchorPosition="downCenter"
        button={
          <EuiButtonEmpty
            color="text"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
            size="s"
            type="button"
          >
            Rows per page: 
            10
          </EuiButtonEmpty>
        }
        closePopover={[Function]}
        id="customizablePagination"
        isOpen={false}
        ownFocus={false}
        panelPaddingSize="none"
        withTitle={true}
      >
        <EuiContextMenuPanel
          hasFocus={true}
          items={
            Array [
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                5
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                10
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                20
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                50
              </EuiContextMenuItem>,
            ]
          }
        />
      </EuiPopover>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`IndicesList updating props should render all new indices 1`] = `
<div>
  <EuiTable>
    <EuiTableBody>
      <EuiTableRow
        key="0"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="1"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="2"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="3"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="4"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="5"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="6"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="7"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="8"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          kibana
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        key="9"
      >
        <EuiTableRowCell
          align="left"
          textOnly={true}
        >
          es
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="center"
    component="div"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPopover
        anchorPosition="downCenter"
        button={
          <EuiButtonEmpty
            color="text"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
            size="s"
            type="button"
          >
            Rows per page: 
            10
          </EuiButtonEmpty>
        }
        closePopover={[Function]}
        id="customizablePagination"
        isOpen={false}
        ownFocus={false}
        panelPaddingSize="none"
        withTitle={true}
      >
        <EuiContextMenuPanel
          hasFocus={true}
          items={
            Array [
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                5
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                10
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                20
              </EuiContextMenuItem>,
              <EuiContextMenuItem
                icon="empty"
                onClick={[Function]}
              >
                50
              </EuiContextMenuItem>,
            ]
          }
        />
      </EuiPopover>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiPagination
        activePage={0}
        onPageClick={[Function]}
        pageCount={2}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
